--- a/GosuGamers/GosuGamers-Info.plist
+++ b/GosuGamers/GosuGamers-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFiles</key>
 	<array/>
 	<key>CFBundleIdentifier</key>
-	<string>com.lucido.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.lucido.gosugamers</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
